# iwr_school_2017

./: CMakeLists.txt  hamiltonian.h  plot.gnuplot  qm_mf.cc  step-6.cc
tests/: coulomb.mpirun=4.output  coulomb.prm  coulomb_02.mpirun=4.output  coulomb_02.prm  harmonic.mpirun=4.output  harmonic.prm  laplace.mpirun=3.output
